# base64-component

./: Cargo.toml  base64_component.wasm
src/: lib.rs
wit/: world.wit
