[package]
name = "base64-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
cargo-component-bindings = "0.5.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:base64"

[package.metadata.component.dependencies]

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true